vertical alignment issue

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -107,7 +107,7 @@ h2 {
   display: inline-block;
 
   img {
-    vertical-align: middle;
+    vertical-align: bottom;
   }
 }
 
